channel-ib/kdc/portal/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: portal
  name: portal
spec:
  host: online-new.alinma.com
  port:
    targetPort: http
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIEyDCCA7CgAwIBAgIQDPW9BitWAvR6uFAsI8zwZjANBgkqhkiG9w0BAQsFADBh
[...]
      JCqVJUzKoZHm1Lesh3Sz8W2jmdv51b2EQJ8HmA==
      -----END CERTIFICATE-----

    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGyTCCBbGgAwIBAgIQBaO6+p1Ba5j9KRvSjj+CETANBgkqhkiG9w0BAQsFADBZ
[...]
      8NvZ7Npq0V7R5yC5Fw==
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQDQLTsof3hFQ1e1
[...]
      QglwZ+FXbVEnU2WDGDfydw==
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: portal
